# BCIS-app

./: .gitignore  PRIVACY.md  README.md  TERMS.md
backend/: pyproject.toml  requirements.txt
backend/api/: admin.py  models.py
backend/api/migrations/: 0001_initial.py  0002_parent_staff_student_delete_user.py
backend/backend/: settings.py  urls.py
backend/backend/api/: admin.py  apps.py  authentication.py  callbacks.py  jwks.json  models.py  serializers.py  views.py
backend/backend/api/migrations/: 0001_initial.py  0002_featured.py  0002_post.py  0002_remove_parent_user_remove_pushid_user_and_more.py  0002_rename_post_news.py  0003_appuser_gpascore_delete_parent_delete_staff_and_more.py  0003_portfolio.py  0003_rename_title_emoji_news_emoji.py  0003_team_score_alter_post_title.py  0004_activity_notification_news_notification_and_more.py  0004_alter_activity_content_alter_news_content_and_more.py  0005_alter_gpascore_gpa.py  0005_rename_photo_portfolio_image_url.py
mobile/: .eslintrc.json  .gitignore  App.js  App.tsx  app.json  package-lock.json  package.json  store.ts  types.tsx
mobile/android/: settings.gradle
mobile/components/: ActivityItem.tsx  FeaturedItem.tsx  FeaturedItemCarousel.tsx  NewsItem.tsx  PortfolioItem.tsx  ScoreItem.tsx  SignInWithApple.tsx  SignInWithGoogle.tsx  SignupBenefits.tsx  TopActivity.tsx  TopNews.tsx  VerseOfDay.tsx
mobile/constants/: API.ts  AWSCognito.ts  Layout.ts  MarkdownRenderRules.js  Theme.ts
mobile/hooks/: useCachedResources.ts  useLayout.ts  useTheme.ts
mobile/ios/: Podfile
mobile/navigation/: index.tsx  (+1 more)
(+49 files in other folders)
